--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ main {
 }
 
 .cards {
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
 }
@@ -349,5 +349,6 @@ main {
   text-align: center;
   margin-top: 15px;
 }
+
 
 
